overflow bug

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,14 @@
-@import "./normalize";
+// @import "./normalize";
 @import "./variables";
 
-html {
+html,
+body {
   margin: 0;
   padding: 0;
+  // scroll-behavior: smooth;
+  box-sizing: border-box;
+  // overflow-x: hidden;
+  word-wrap: break-word;
 }
 
 body {
@@ -15,9 +20,9 @@ body {
   letter-spacing: 1px;
 }
 
-// .wrapper {
-//   overflow-x: hidden;
-// }
+.wrapper {
+  overflow-x: hidden;
+}
 
 nav {
   background-image: linear-gradient(134.46deg, #4279db 0%, #82afff 99.07%);
@@ -41,12 +46,23 @@ nav {
     justify-content: space-around;
     align-items: center;
     padding-left: 0;
+    margin-top: 2rem;
+
+    // animations
+    position: absolute;
+    right: 0px;
+
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
 
     li {
       width: 90%;
       text-align: left;
       border-bottom: 1px solid #e9eef2;
       padding: 0.5rem;
+
+      //animations
+      // opacity: 0;
 
       &:nth-child(5) {
         border-bottom: none;
@@ -145,6 +161,30 @@ nav {
 }
 
 //show nav links
-.show {
-  display: vis;
+// .show {
+//   display: vis;
+// }
+
+// mobile nav menu animations
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+.hidden {
+  display: none;
+}
+
+// .active {
+//   color: $accent-color !important;
+// }
